--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "body-parser": "^1.20.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "fast-csv": "^4.3.6",
         "mongoose": "^6.9.0",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "yahoo-finance2": "^2.3.10"
     },
     "devDependencies": {
         "concurrently": "^7.6.0"
