--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     },
     "devDependencies": {
         "concurrently": "^7.6.0"
+    },
+    "engines": {
+        "npm": ">=8.0.0 <9.0.0",
+        "node": ">=16.0.0 <17.0.0"
     }
 }
