--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "concurrently \"nodemon server.js\" \"npm run client\"",
-        "client": "npm start --prefix client",
+        "start": "concurrently \"nodemon server.js\" \"cd client && npm start\"",
+        "build": "cd client && npm run build",
+        "install-client": "cd client && npm install",
+        "build-client": "npm run install-client && npm run build",
         "server": "nodemon server.js"
     },
     "repository": {
@@ -26,8 +28,7 @@
         "express": "^4.18.2",
         "fast-csv": "^4.3.6",
         "moment-business-days": "^1.2.0",
-        "mongoose": "^6.9.0",
-        "nodemon": "^2.0.20",
+        "nodemon": "^3.0.2",
         "yahoo-finance2": "^2.4.1"
     },
     "devDependencies": {
