--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "yahoo-finance2": "^2.4.1"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "concurrently": "^7.6.0"
     },
     "engines": {
