--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "main": "index.js",
     "scripts": {
         "start": "concurrently \"nodemon server.js\" \"cd client && npm start\"",
+        "start-watch": "nodemon server.js",
         "build": "cd client && npm run build",
         "install-client": "cd client && npm install",
         "build-client": "npm run install-client && npm run build",
-        "server": "nodemon server.js"
+        "server": "nodemon server.js",
+        "dev": "concurrently \"npm run start-watch\" \"cd client && npm start\""
     },
     "repository": {
         "type": "git",
