--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
         "concurrently": "^7.6.0"
     },
     "engines": {
-        "npm": ">=8.0.0 <9.0.0",
-        "node": ">=16.0.0 <17.0.0"
+        "node": ">=18.0.0"
     }
 }
